--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "Exports Jira stories to a CSV file."
 readme = "https://github.com/Brown-University-Library/jira_stories_export_script/blob/main/README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
+    "httpx~=0.28.1",
     "pypdf2~=3.0.0",
     "python-dotenv~=1.2.0",
-    "requests~=2.32.0",
 ]
 
 [dependency-groups]
